--- a/src/main/resources/assets/hamsters/lang/en_us.json
+++ b/src/main/resources/assets/hamsters/lang/en_us.json
@@ -15,6 +15,7 @@
 
   "item.hamsters.hamster_spawn_egg": "Hamster Spawn Egg",
   "block.hamsters.tunnel": "Tunnel",
+  "block.hamsters.hamster_wheel": "Hamster Wheel",
 
   "hamsters.subtitles.hamster.ambient": "Hamster squeaks",
   "hamsters.subtitles.hamster.hurt": "Hamster hurts",
