--- a/src/main/resources/assets/hamsters/lang/en_us.json
+++ b/src/main/resources/assets/hamsters/lang/en_us.json
@@ -13,6 +13,9 @@
   "tooltip.hamsters.black_white": "Black White",
   "tooltip.hamsters.black": "Black",
 
+  "tooltip.hamsters.tamed": "Tamed",
+  "tooltip.hamsters.baby": "Baby",
+
   "item.hamsters.hamster_spawn_egg": "Hamster Spawn Egg",
   "block.hamsters.tunnel": "Tunnel",
   "block.hamsters.hamster_wheel": "Hamster Wheel",
