--- a/src/main/resources/assets/hamsters/lang/cs_cz.json
+++ b/src/main/resources/assets/hamsters/lang/cs_cz.json
@@ -6,7 +6,7 @@
   "item.hamsters.hamster": "Křeček",
 
   "tooltip.hamsters.white": "Bílý",
-  "tooltip.hamsters.peaches_and_cream": "Broskvový a smetanový",
+  "tooltip.hamsters.peaches_and_cream": "Broskvové smetanový",
   "tooltip.hamsters.orange": "Oranžový",
   "tooltip.hamsters.grey_white": "Šedobílý",
   "tooltip.hamsters.brown": "Hnědý",
