--- a/src/main/resources/assets/hamsters/lang/en_us.json
+++ b/src/main/resources/assets/hamsters/lang/en_us.json
@@ -5,23 +5,28 @@
   "entity.hamsters.hamster": "Hamster",
   "item.hamsters.hamster": "Hamster",
 
+  "tooltip.hamsters.tamed": "Tamed",
+  "tooltip.hamsters.baby": "Baby",
+
+  "item.hamsters.hamster_spawn_egg": "Hamster Spawn Egg",
+  "item.hamsters.hamster_new_spawn_egg": "Hamster Spawn Egg",
+  "block.hamsters.tunnel": "Tunnel",
+  "block.hamsters.hamster_wheel": "Hamster Wheel",
+
+  "block.hamsters.blue_hamster_bowl": "Blue Hamster Bowl",
+  "block.hamsters.blue_hamster_bottle": "Blue Hamster Bottle",
+  "item.hamsters.hamster_ball": "Hamster Ball",
+
+  "hamsters.subtitles.hamster.ambient": "Hamster squeaks",
+  "hamsters.subtitles.hamster.hurt": "Hamster hurts",
+  "hamsters.subtitles.hamster.death": "Hamster dies",
+  "hamsters.subtitles.hamster.beg": "Hamster begs",
+
   "tooltip.hamsters.white": "White",
   "tooltip.hamsters.peaches_and_cream": "Peaches and Cream",
   "tooltip.hamsters.orange": "Orange",
   "tooltip.hamsters.grey_white": "Grey White",
   "tooltip.hamsters.brown": "Brown",
   "tooltip.hamsters.black_white": "Black White",
-  "tooltip.hamsters.black": "Black",
-
-  "tooltip.hamsters.tamed": "Tamed",
-  "tooltip.hamsters.baby": "Baby",
-
-  "item.hamsters.hamster_spawn_egg": "Hamster Spawn Egg",
-  "block.hamsters.tunnel": "Tunnel",
-  "block.hamsters.hamster_wheel": "Hamster Wheel",
-
-  "hamsters.subtitles.hamster.ambient": "Hamster squeaks",
-  "hamsters.subtitles.hamster.hurt": "Hamster hurts",
-  "hamsters.subtitles.hamster.death": "Hamster dies",
-  "hamsters.subtitles.hamster.beg": "Hamster begs"
+  "tooltip.hamsters.black": "Black"
 }
