--- a/src/main/resources/assets/hamsters/lang/en_us.json
+++ b/src/main/resources/assets/hamsters/lang/en_us.json
@@ -86,6 +86,7 @@
   "hamsters.subtitles.hamster.hurt": "Hamster hurts",
   "hamsters.subtitles.hamster.death": "Hamster dies",
   "hamsters.subtitles.hamster.beg": "Hamster begs",
+  "hamsters.subtitles.hamster.explode": "Hamster explodes",
 
   "tooltip.hamsters.white": "White",
   "tooltip.hamsters.peaches_and_cream": "Peaches and Cream",
